--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,8 +12,8 @@ body {
 </style>
 </head>
 <body>
-	<a href="#">Link zu Aufgabe 2</a>
+	<a href="">Link zu Aufgabe 2</a>
 	<br>
-	<a href="#">Link zu Aufgabe 1</a>
+	<a href="https://guneykocyigit.github.io/EIA1-SoSe21/Aufgabe1/Aufg1.html">Link zu Aufgabe 1</a>
 </body>
 </html>
