--- a/Aufgabe3/Portfolio.html
+++ b/Aufgabe3/Portfolio.html
@@ -10,15 +10,7 @@
 
 <header>
     <img src= "Bilder/Header.jpeg">
-    <nav>
-        <ul>
-          <a href="aboutme.html"target="_blank">About me</a>
-              <br>
-            <a href="Portfolio.html">Portfolio</li>
-              <br>
-            <a href="Contact.html">Contact</li>
-        </ul>
-    </nav>
+ <h1><b>Portfolio</b></h1>
    </header>
 
    <main>
@@ -49,7 +41,7 @@
 
 <footer>
 
-
+    <a href="index.html"target="_blank">back to website</a>
 </footer>
 
 </body>
