--- a/Aufgabe3/Contact.html
+++ b/Aufgabe3/Contact.html
@@ -30,7 +30,9 @@
 <p>Güney Kocyigit
   <br>
   gueney.kocyigit@hs-furtwangen.de
+  
 </p>
+<img src="Bilder/icon_facebook.png" class="icon">
 <br>
 <p>Kontaktformular:</p>
 <br>
