--- a/Aufgabe4/Station7/station7.html
+++ b/Aufgabe4/Station7/station7.html
@@ -13,7 +13,11 @@
           <img class="card" src="wrapperbg.png">
 
           <div>
-            <iframe class="youtube" width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/UOZpCJhxv-w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="youtube"  width="320" height="270" controls autoplay>
+
+              <source src="iframe width="560" height="315" src="https://www.youtube.com/embed/UOZpCJhxv-w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" type="video/mp4"</source>
+              
+            </iframe>
           </div>
             
           <img class="Schleife" src="banderole.png">
