--- a/Aufgabe4/Station7/station7.html
+++ b/Aufgabe4/Station7/station7.html
@@ -13,9 +13,9 @@
           <img class="card" src="wrapperbg.png">
 
           <div>
-            <iframe class="youtube"  width="320" height="270" controls autoplay>
+            <iframe class="youtube"  
 
-              <source src="iframe width="560" height="315" src="https://www.youtube.com/embed/UOZpCJhxv-w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" type="video/mp4"</source>
+              width="560" height="315" src="https://www.youtube.com/embed/UOZpCJhxv-w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
               
             </iframe>
           </div>
