--- a/Aufgabe5/index.html
+++ b/Aufgabe5/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Carbon Dioxide Emissions</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="scrip5.ts" async></script>
 </head>
 <body>
     <nav>
