--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,8 @@ body {
 </style>
 </head>
 <body>
+	<a target="_blank" href="https://guneykocyigit.github.io/EIA1-SoSe21/Aufgabe6/index.html">Link zu Aufgabe 6</a>
+	<br>
 	<a target="_blank" href="https://guneykocyigit.github.io/EIA1-SoSe21/Aufgabe5/index.html">Link zu Aufgabe 5</a>
 	<br>
 	<a target="_blank" href="https://guneykocyigit.github.io/EIA1-SoSe21/Aufgabe4/index.html">Link zu Aufgabe 4</a>
