--- a/Aufgabe9/index.html
+++ b/Aufgabe9/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style9.css" />
-    <script src="script9.ts"></script>
+    <script src="script9.js"></script>
   </head>
   <body>
     <div class="content">
