--- a/Aufgabe11/index.html
+++ b/Aufgabe11/index.html
@@ -15,6 +15,7 @@
     />
     <link rel="stylesheet" href="style11.css" />
     <script src="script11.js"></script>
+    <script src="./libs/artyom.window.min.js"></script>
   </head>
   <body>
     <div class="content">
